--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">StudyRecyclerView</string>
+    <string name="recyclerview_simple">RecyclerView简单Demo</string>
+    <string name="recyclerview_middle">RecyclerView进阶Demo</string>
+    <string name="splash_doc">demo说明文档</string>
 </resources>
